syntax = "proto3";

package gsvc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "personnel_models.proto";

option csharp_namespace = "Purple.Service.Grpc";

message PersonnelRequest{
	PersonnelGto personnel = 1;
}

message PersonnelResponse{
	bool result = 1;
}